[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/player/player_core_local_debugui.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.470588 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 157, 196 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 12.0
margin_right = 333.0
margin_bottom = 112.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 4.0
margin_top = 6.0
margin_right = 147.0
margin_bottom = 56.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer"]
margin_right = 143.0
margin_bottom = 86.0
mouse_filter = 2
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current_Map" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_right = 77.0
margin_bottom = 14.0
text = "Map Name :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current_Map_Value" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 81.0
margin_right = 105.0
margin_bottom = 14.0
text = "N/A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 18.0
margin_right = 77.0
margin_bottom = 32.0
text = "Input :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input_Value" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 81.0
margin_top = 18.0
margin_right = 105.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Velocity" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 36.0
margin_right = 77.0
margin_bottom = 50.0
text = "Velocity :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Velocity_Value" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 81.0
margin_top = 36.0
margin_right = 105.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 54.0
margin_right = 77.0
margin_bottom = 68.0
text = "Speed :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed_Value" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 81.0
margin_top = 54.0
margin_right = 105.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnFloor" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_top = 72.0
margin_right = 77.0
margin_bottom = 86.0
text = "On Floor :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnFloor_Value" type="Label" parent="Panel/MarginContainer/GridContainer"]
margin_left = 81.0
margin_top = 72.0
margin_right = 105.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
visible = false
margin_left = 10.0
margin_top = 127.0
margin_right = 333.0
margin_bottom = 187.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
margin_left = 4.0
margin_top = 6.0
margin_right = 147.0
margin_bottom = 56.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel2/MarginContainer"]
margin_right = 249.0
margin_bottom = 50.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapChange" type="Label" parent="Panel2/MarginContainer/GridContainer"]
margin_top = 3.0
margin_right = 89.0
margin_bottom = 17.0
text = "Map Change :"

[node name="map_test" type="Button" parent="Panel2/MarginContainer/GridContainer"]
margin_left = 93.0
margin_right = 164.0
margin_bottom = 20.0
text = "map_test"

[node name="map_cyber" type="Button" parent="Panel2/MarginContainer/GridContainer"]
margin_left = 168.0
margin_right = 249.0
margin_bottom = 20.0
text = "map_cyber"

[node name="map_cyber1" type="Button" parent="Panel2/MarginContainer/GridContainer"]
margin_top = 24.0
margin_right = 89.0
margin_bottom = 44.0
text = "map_cyber1"

[connection signal="button_up" from="Panel2/MarginContainer/GridContainer/map_test" to="." method="_on_map_test_button_up"]
[connection signal="button_up" from="Panel2/MarginContainer/GridContainer/map_cyber" to="." method="_on_map_cyber_button_up"]
[connection signal="button_up" from="Panel2/MarginContainer/GridContainer/map_cyber1" to="." method="_on_map_cyber1_button_up"]
